# livingpark-utils

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflow/: pre-commit.yaml
.github/workflows/: gen_scripts.yaml  nbconvert.yaml  pre-commit.yaml
livingpark_utils/: __init__.py  cli.py  clinical.py  deprecation.py  ignore.py  livingpark_utils.py  parkinson.py  toggle_button.html  utils.py  visualization.py
livingpark_utils/dataset/: convert.py  ppmi.py
livingpark_utils/download/: DownloaderABC.py  ppmi.py
livingpark_utils/maketal/: maketal.py
livingpark_utils/notebooks/: MRI metadata.ipynb  PPMI medication and ON-OFF status.ipynb  mri_metadata.ipynb  pd_status.ipynb
livingpark_utils/pipeline/: PipelineABC.py  exceptions.py  qc.py  spm.py
livingpark_utils/scripts/: MRI metadata.py  _gen_run.py  mri_metadata.py  pd_status.py  run.py
livingpark_utils/templates/: call_batch.m  dartel_normalization_job.m  pairwise_registration_job.m  segmentation_job.m  spatial_normalization_job.m  spatial_smoothing_job.m  stats_job.m  tissue_volumes_job.m
livingpark_utils/zeighamietal/: __init__.py  constants.py  zeighamietal.py
